Fix padding, sizes and z-index

--- a/static/style/pages/home.less
+++ b/static/style/pages/home.less
@@ -4,9 +4,10 @@ section.themes {
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-height: calc(100vh - @header-height - 19px);
-    padding-top: @header-height;
-    
+    min-height: 100vh;
+    position: relative;
+    z-index: 0;
+
     > header {
         color: @primary-color;
         width: 950px;
